--- a/src/mainstyle.css
+++ b/src/mainstyle.css
@@ -5,40 +5,10 @@
     display:inline-block;
 }
 .indicatortitleblock {
+    background-color: lightblue;
     height:100%;
     width:32.5%;
     display:inline-block;
-    text-align:center;
-    vertical-align: middle;
-}
-#indicatorhead{
-    height:50px;
-    padding-bottom:2px;
-}
-#indicatortitle {
-    height:50px;
-    padding-bottom:2px;
-    border-bottom:solid;
-}
-#leftcontent {
-    background-color:yellow;
-    height:500px;
-    width:25%;
-    border-right:solid;
-    display:inline-block;
-    overflow: scroll;
-}
-#rightcontent {
-    background-color:red;
-    height:500px;
-    width:73.6%;
-    display:inline-block;
-}
-.playerclass {
-    height:150px;
-    width:100%;
-    background-color:blue;
-    margin-bottom:10px;
 }
 #indicatorblock01 {
     
