--- a/src/mainstyle.css
+++ b/src/mainstyle.css
@@ -18,3 +18,9 @@
 }
 #indicatorblock03 {
 }
+.playerclass {
+    height:150px;
+    width:100%;
+    background-color:blue;
+    margin-bottom:10px;
+}
