--- a/src/mainstyle.css
+++ b/src/mainstyle.css
@@ -70,7 +70,6 @@ p {
     overflow: scroll;
 }
 .playerclass {
-    height:150px;
     width:100%;
     margin-top:10px;
 }
@@ -94,4 +93,9 @@ p {
     height:500px;
     width:73%;
     display:inline-block;
+}
+.campusarea {
+    width:60%;
+    height:50%;
+    background-color:white;
 }
