--- a/src/css/game.css
+++ b/src/css/game.css
@@ -28,8 +28,8 @@ color: black;
 }
 
 .area{
+	vertical-align:top;
 	margin: 2px;
-	margin-top: 5px;
 	background-color:#CCFF66;
 	display: inline-block;
 }
